--- a/app/globals.css
+++ b/app/globals.css
@@ -4,21 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  /* --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-  --gap: 2rem;
-  --duration: 30s;
-  --scroll-start: 0s;
-  --scroll-end: cals(-100% -var(--gap)); */
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -218,7 +204,7 @@ footer {
 
 .parent-container {
   position: relative;
-  width: 100%; /* Adjust the width as needed */
+  width: 100%;
   margin-top: 2rem;
   padding: 1rem;
   height: 4rem;
@@ -231,10 +217,6 @@ footer {
   animation-duration: 20s;
   animation-fill-mode: both;
   animation-iteration-count: infinite;
-}
-.test {
-  display: flex;
-  justify-content: space-around;
 }
 
 @keyframes drive {
@@ -273,12 +255,8 @@ footer {
 
 /* section-1 */
 
-.section-black {
-  /* background-color: aliceblue; */
-}
-
 .card {
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   border-radius: 5px;
 }
 
